# Code4Ge

./: .gitignore  DEMO.md  README.md  __init__.py  cache.py  cli.py  commitforge-report.html  commitforge.spec  config.py  filters.py  generator.py  main.py  parser.py  pyproject.toml  report.py  requirements.txt  scanner.py  types.py
.github/workflows/: release.yml
commitforge/: __init__.py  __main__.py  analyzer.py  cache.py  checks.py  cli.py  config.py  diff_parser.py  filters.py  generator.py  parser.py  report.py  scanner.py  types.py  utils.py  validator.py
commitforge/tests/: __init__.py  conftest.py  test_analyzer.py  test_config.py  test_scanner.py  test_validator.py
examples/: sample_config.json
scripts/: demo.sh
tests/: test_cli.py  test_config.py  test_generator.py  test_integration.py  test_parser.py  test_report.py  test_scanner.py
