[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commitforge"
version = "1.0.0"
description = "Tired of writing vague commit messages? CommitForge parses your actual changes, infers the right conventional commit type, and scans your repo for things you shouldn't be shipping like binary blobs, forgotten TODOs, undocumented functions, and dead imports. All in one command with zero dependencies, no network calls, and no pip install required."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
commitforge = "commitforge.cli:main"

[tool.setuptools.packages.find]
include = ["commitforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
