[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commitforge"
version = "1.0.0"
description = "Repository analysis and commit standardization tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["typer>=0.9.0"]

[project.scripts]
commitforge = "commitforge.cli:app"

[tool.setuptools.packages.find]
include = ["commitforge*"]

[tool.pytest.ini_options]
testpaths = ["commitforge/tests"]
pythonpath = ["."]
addopts = "--cov=commitforge --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["commitforge"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
