[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commitforge"
version = "1.0.0"
description = "Repository analysis and commit standardization tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["typer>=0.9.0"]

[project.scripts]
commitforge = "commitforge.cli:main"

[tool.setuptools.packages.find]
include = ["commitforge*"]

[tool.pytest.ini_options]
testpaths = ["commitforge/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.mypy]
strict = true
python_version = "3.9"
